# nobot

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  ai-detection-tools.md  ai-writing-guide.md  pyproject.toml
.claude-plugin/: plugin.json
agents/: ai-tell-quickcheck.md  ai-tell-reviewer.md
docs/: foldin-plan-2026-07-06.md
docs/adr/: 0001-record-architecture-decisions.md  0002-package-nobots-as-a-light-core-src-layout-package-with-optional-extras.md  0003-share-clean-prose-and-prose-windows-as-the-single-prose-prep-path-for-all-detectors.md  0004-keep-the-quorum-detect-engine-pure-and-preserve-the-0-2-fail-open-hook-contract.md  0005-model-based-score-command-four-local-detectors-behind-the-models-extra-raw-uncalibrated-output.md  0006-humanize-uses-pydantic-ai-pluggable-model-default-local-ollama-hard-error-if-down.md  0007-adopt-typer-for-the-cli-exit-codes-and-json-owned-at-the-cli-layer.md  0008-plugin-invokes-the-installed-cli-via-uvx-instead-of-bundling-detection-code.md
docs/superpowers/plans/: 2026-07-09-nobots-cli-refactor-plan.md
docs/superpowers/specs/: 2026-07-09-nobots-cli-refactor-design.md
hooks/: hooks.json
hooks/scripts/: check-ai-tells.sh  check_ai_tells.py
plugin/agents/: ai-tell-quickcheck.md  ai-tell-reviewer.md
plugin/hooks/: hooks.json
scripts/: deep_stylometry.py
skills/detect-ai-writing/: SKILL.md
skills/humanize-writing/: SKILL.md
src/nobots/: __init__.py  cli.py  config.py
src/nobots/tui/: app.py
tests/: test_cli.py  test_detect.py  test_humanize.py  test_mcp.py  test_models.py  test_prose.py  test_stylometry.py  test_tui.py
(+10 files in other folders)
